--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,13 +22,13 @@
                 </li>
             </ul>
             {% else %}
-            <!-- <ul class="navbar-nav ms-auto mt-2">
+            <ul class="navbar-nav ms-auto mt-2">
                 <li class="nav-item">
                     <a href="/login" class="nav-link">Log In</a>
                 </li><li class="nav-item">
                     <a href="/register" class="nav-link">Register</a>
                 </li>
-            </ul> -->
+            </ul>
             {% endif %}
         </div>
     </div>
