--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block title %}
-    Welcome
+    Dashboard
 {% endblock %}
 {% block body %}
-index.html
 
+dashboard.html
 {% endblock %}
