--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <body>
         {% include "navbar.html" %}
         {% include "flash.html" %}
-            <div class="container">
+            <div class="container text-center">
                 {% block body %}
                 {% endblock %}
             </div>
