--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,8 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
             <!-- Custom CSS -->
             <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+            <!-- Font Awesome -->
+            <script src="https://kit.fontawesome.com/d1622cf4cc.js" crossorigin="anonymous"></script>
                         
             <title>Your Budget: {% block title %}{% endblock %}</title>
     </head>
