added edit/delete buttons to rows

--- a/templates/liabilities.html
+++ b/templates/liabilities.html
@@ -16,21 +16,33 @@ Liabilities
 
 
 <form action="" method="post">
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <th colspan="3">Your Expenses</th>
+            <th>Edit/Delete</th>
         </thead>
         <tbody>
             {% for expense in expenses %}
                 <tr>
-                    <td>{{ expense }}</td>
+                    <td>{{ expense }} </td>
                     <td>$ <input type="number"></td>
                     <td>
-                        <select>
+                        <select class="form-control">
                             {% for item in frequency %}
                             <option>{{ item }}</option>
                             {% endfor %}
                         </select>
+                    </td>
+                    <td>
+                        <button class="btn btn-secondary">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </button>
+                        <button class="btn btn-secondary">
+                            <i class="fa-regular fa-pen-to-square"></i>
+                        </button> 
+                        <button class="btn btn-secondary">
+                            <i class="fa-regular fa-trash-can"></i>
+                        </button>
                     </td>
                 </tr>
             {% endfor %}
