--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,6 @@
             <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
             <!-- Font Awesome -->
             <script src="https://kit.fontawesome.com/d1622cf4cc.js" crossorigin="anonymous"></script>
-                        
             <title>Your Budget: {% block title %}{% endblock %}</title>
     </head>
     <body>
@@ -22,6 +21,8 @@
             </div>
         <!-- Bootstrap JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+        <!-- JQuery -->
+        <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
         <!-- Custom Javascript -->
         <script src="{{ url_for('static', filename='scripts.js') }}"></script>
    </body>
