--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,6 @@ Log In
     <div class="mb-3">
         {{ form.submit(class="btn btn-primary") }}
     </div>
-    <p>Dont have an account? <a href="/register">Register here!</a>!</p>
+    <p>Dont have an account? <a href="/register">Register here</a>!</p>
 </form>
 {% endblock %}
