--- a/templates/liabilities.html
+++ b/templates/liabilities.html
@@ -15,7 +15,7 @@ Liabilities
 <br>
 
 
-<form action="" method="post">
+<form action="/liabilities" method="post">
     <table class="table table-hover table-striped table-dark">
         <thead>
             <th colspan="3">Your Expenses</th>
@@ -24,10 +24,10 @@ Liabilities
         <tbody>
             {% for expense in expenses %}
                 <tr>
-                    <td>{{ expense }} </td>
-                    <td>$ <input type="number"></td>
+                    <td><input type="text" name="expense" value="{{ expense }}"></td>
+                    <td>$ <input name="amount" type="number"></td>
                     <td>
-                        <select class="form-control">
+                        <select name="frequency" class="form-control">
                             {% for item in frequency %}
                                 <option>{{ item }}</option>
                             {% endfor %}
@@ -53,7 +53,7 @@ Liabilities
                     <a class="btn btn-secondary add-new">Add New Expense</a>
                 </td>
                 <td colspan="2">
-                    <a  class="btn btn-secondary">Save My Expenses</a>
+                    <button type="submit" class="btn btn-secondary">Save My Expenses</button>
                 </td>
             </tr>
         </tfoot>
