edited navbar to refleect new pages

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,10 +11,13 @@
                     <a class="nav-link" aria-current="page" href="/dashboard">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/assets">Assets</a>
+                    <a class="nav-link" href="/income">Income</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/liabilities">Liabilities</a>
+                    <a class="nav-link" href="/outgoings">Outgoings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/savings">Savings</a>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto mt-2">
