added income, outgoings and asset pages to site

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
     <body>
         {% include "navbar.html" %}
         {% include "flash.html" %}
-            <div class="container text-center">
+            <div class="text-center">
                 {% block body %}
                 {% endblock %}
             </div>
