--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,8 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
             <!-- Custom CSS -->
             <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+            <!-- chart js -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
             <!-- Font Awesome -->
             <script src="https://kit.fontawesome.com/d1622cf4cc.js" crossorigin="anonymous"></script>
             <title>Your Budget: {% block title %}{% endblock %}</title>
@@ -15,7 +17,7 @@
     <body>
         {% include "navbar.html" %}
         {% include "flash.html" %}
-            <div class="text-center">
+            <div class="text-center container">
                 {% block body %}
                 {% endblock %}
             </div>
