Added user welcome screen

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,21 @@
     Welcome
 {% endblock %}
 {% block body %}
-index.html
+<h1>Welcome to your new monthly budget tool!</h1>
+<h3>Keep all of your monthly incomes and expenses all in one place!</h3>
+<div class="my-5 d-flex justify-content-center align-items-center">
+<div class="card bg-dark text-light">
+    <div class="card-header">
+        <h3>Sign in or Register!</h3>
+    </div>
+    <div class="card-body">
+        <h4>Are you new here?</h4>
+        <a href="/register" class="btn btn-secondary">Register now!</a>
+        <hr>
+        <h4 class="mt-4">Already have an account?</h4>
+        <a href="/login" class="btn btn-secondary">Log in!</a>
+    </div>
+</div>
+</div>
 
 {% endblock %}
